--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
     "express": "^5.1.0",
     "i18next": "^23.10.1",
     "i18next-browser-languagedetector": "^7.2.0",
+    "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.344.0",
     "multer": "^2.0.1",
     "mysql2": "^3.14.1",
