--- a/package.json
+++ b/package.json
@@ -5,23 +5,26 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "build": "tsc && vite build",
     "lint": "eslint .",
     "preview": "vite preview",
     "start": "node src/server.js",
+    "serve": "vite preview",
     "prod": "npm run build && cross-env NODE_ENV=production node src/server.js"
   },
   "dependencies": {
     "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
     "dotenv": "^17.2.1",
-    "express": "^5.1.0",
+    "express": "^4.18.2",
     "i18next": "^23.10.1",
     "i18next-browser-languagedetector": "^7.2.0",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.344.0",
+    "mime-types": "^3.0.1",
     "multer": "^2.0.1",
     "mysql2": "^3.14.1",
+    "path-to-regexp": "^6.2.1",
     "pg": "^8.16.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
